--- a/master.css
+++ b/master.css
@@ -11,39 +11,54 @@ body{
 }
 
 .olone{
-    float: right;
-    width: 300px;
+    background: white;
 
+    /* Where this will align in relation to the immediate bigger picture */
+    float: right;
+
+    /* How wide this block of instuction will be on the web page */
+    width: 400px;
+
+    /* border of the item in question */
     border-style: solid;
 
     /* Space after the border to the next item*/
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 15px;
-    margin-left: 50px;
+    margin-left: 10px;
 
     /* Space between the content and the border*/
     padding-top: 50px;
-    padding-right: 30px;
+    padding-right: 10px;
     padding-bottom: 50px;
-    padding-left: 80px;
+    padding-left: 60px;
 }
 
 .oltwo{
-    float: left;
+    background: white;
+    float: right;
     border-style: solid;
-    margin: 25px 50px 75px 100px;
+    width: 400px;
+    margin: 10px 20px 75px 100px;
     /* top right bottom left */
     padding: 25px 50px 75px 100px;
     /* top right bottom left*/
 }
 
 
-
-
-
 ul{
-    float:left;
-    width: 120px;
+    background: white;
+    float: left;
+    width: 200px;
     border-style: solid;
+    margin-right: 100px;
+}
+
+
+form{
+    background: white;
+    border-style: solid;
+    width: 700px;
+    margin-top: 250px;
 }
