--- a/css_files/mutinta_position_test.css
+++ b/css_files/mutinta_position_test.css
@@ -1,16 +1,21 @@
+/* Test box one. Will be on far right of screen for final list*/
 #box1{
+    /* The next 4 fields change basic layout of box1*/
     border: 1px solid;
     height: 600px;
     width: 500px;
     background-color: skyblue;
 
+    /* The next 3 determine how box one is position in relation to the first higher container*/
     position: absolute;
     top: 150px;
     left: 950px;
 
+    /* This allows text within the box to not spill over but to scroll. Remember to switch this value to auto*/
     overflow: scroll;
 }
 
+/* Text box 2. Will be data pulled from database.*/
 #box2{
     border: 1px solid;
     height: 400px;
@@ -24,22 +29,26 @@
     overflow: auto;
 }
 
+/* Created object for form to make it easier to position everything in one location*/
 #form1{
     position: absolute;
     bottom: 50px;
     left: 50px;
 }
 
+/* Object is for the text boxes that the inputs will be typed into*/
 input[type=text]{
     width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
 }
 
+/* Label objects will be for the text before the input boxes*/
 label{
     font-size: 20px;
 }
 
+/* Moved the button to the middle of the screen and made it bigger*/
 #GenerateButton{
     position: absolute;
     bottom: 10px;
@@ -47,6 +56,7 @@ label{
     font-size: 30px;
 }
 
+/* Made this one so that everything could be placed inside it. That way positioning of all objects would be better manageed*/
 #box3{
     border: 1px solid;
     height: 800px;
