--- a/templates/html_files/mutinta_position_test.html
+++ b/templates/html_files/mutinta_position_test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Position Test</title>
-    <link rel="stylesheet" href="..\css_files\mutinta_position_test.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/mutinta_position_test.css') }}">
 </head>
 <body>
 
