--- a/templates/html_files/1750_Generator.html
+++ b/templates/html_files/1750_Generator.html
@@ -12,7 +12,7 @@
     label { font-size: 20px;}
     #GenerateButton { position: absolute; bottom: 10px; left: 740px; font-size: 30px;}
     #paragraphs { position: absolute; top: 240px; left: 10px; height: 200px; width: 440px;}
-      #AddButton {text-align: left; border-radius: 8px; width: 350px}
+      #AddButton {text-align: left; border-radius: 8px; width: 340px}
   </style>
 {% endblock %}
 
@@ -28,10 +28,10 @@
       {% for item in data %}
         <li>
             <input type="submit" id="AddButton" value="
-            Item number:    {{ item[0] }}
-            Nsn:            {{ item[1] }}
+            Item number:      {{ item[0] }}
+            Nsn:                    {{ item[1] }}
             Nomenclature:   {{ item[2] }}
-            Unit of issue:  {{ item[3] }} ">
+            Unit of issue:      {{ item[3] }} ">
         </li>
       <br>
       {% endfor %}
@@ -40,6 +40,7 @@
 
   <div class="input_for_1750">
       <p>This is where the 1750 inputs will go</p>
+      {{ test }}
   </div>
 
   <div id="paragraphs">
