--- a/templates/html_files/base.html
+++ b/templates/html_files/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     {% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/master.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='master.css') }}">
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 
