--- a/templates/html_files/1750_Generator.html
+++ b/templates/html_files/1750_Generator.html
@@ -5,12 +5,12 @@
   {{ super() }}
   <style type="text/css">
     .important { color: #336699; border: 1px solid;}
-    .db_output {border: 1px solid; position: absolute; top: 140px; left: 500px; height: 400px; width: 400px; overflow: scroll;}
-    .input_for_1750 { border: 1px solid; height: 600px; width: 500px; position: absolute; top: 140px; left: 950px; overflow: scroll}
+    .db_output {border: 1px solid; position: absolute; top: 140px; left: 500px; height: 600px; width: 850px; overflow: scroll;}
+    .input_for_1750 { border: 1px solid; height: 100px; width: 500px; position: absolute; top: 740px; left: 950px; overflow: scroll}
     .form1 { position: absolute; bottom: 50px; left: 50px;}
     input[type=text] { width: 50%; padding: 12px 20px; margin: 8px 0;}
     label { font-size: 20px;}
-    #GenerateButton { position: absolute; bottom: 10px; left: 740px; font-size: 30px;}
+    #GenerateButton { position: absolute; font-size: 30px;}
     #paragraphs { position: absolute; top: 240px; left: 10px; height: 200px; width: 440px;}
       #AddButton {text-align: left; border-radius: 8px; width: 340px}
   </style>
@@ -21,21 +21,30 @@
   {{ super() }}
   <div class="db_output">
     <p class="important">
-      Select items from here and click the submit button when done
+        Fill in the name of the Container and the Person packing it. <br>
+      Select items from here then scroll down to the bottom and click on the "Generate" button.
     </p>
 
       <form method="POST" action="/1750">
 
+            <label for="ContainerName">Container name: </label>
+            <input type="text" id="ContainerName" value="Container name"><br>
+            <label for="PersonPacking">Person Packing: </label>
+            <input type="text" id="PersonPacking" value="Person packing"><br> <br> <br>
+
+
           {% for item in data %}
           <input name="label1" type="checkbox" value="{{ item[2] + ' ' + item[1] }}">
-          <label>
-              Item number:      {{ item[0] }} <br>
-              NSN:                    {{ item[1] }} <br>
-              Nomenclature:   {{ item[2] }} <br>
-              Unit of issue:      {{ item[3] }} <br> <br>
-          </label>
+
+              <ll><label>
+                    Nomenclature:   {{ item[2] }}<br>
+                    Item Number:      {{ item[0] }}
+                    NSN:                    {{ item[1] }}
+                    Unit of issue:      {{ item[3] }} <br> <br>
+              </label></ll>
+
           {% endfor %}
-          <input type="Submit">
+          <input type="Submit" id="GenerateButton" value="Generate">
       </form>
 
       <br>
@@ -57,12 +66,6 @@
             <p>This is going to be some kind of warning about what not to do</p>
   </div>
 
-  <form class="form1">
-            <h2>Please input your container name and person packing it</h2>
-            <label for="ContainerName">Container name: </label>
-            <input type="text" id="ContainerName" value="Container name"><br>
-            <label for="PersonPacking">Person Packing: </label>
-            <input type="text" id="PersonPacking" value="Person packing"><br>
-  </form>
-  <input type="submit" id="GenerateButton" value="Generate">
+
+
 {% endblock %}
