Dabbling with the webpages

--- a/templates/html_files/base.html
+++ b/templates/html_files/base.html
@@ -14,9 +14,9 @@
         <h1>Python Inventory Creator</h1>
         <div id="navigationBar">
             <ul>
-                <li>Home</li>
-                <li>Generate 1750</li>
-                <li>Other things...</li>
+                <li><a href="{{ url_for('home') }}">Home</a></li>
+                <li><a href="{{ url_for('create_1750') }}">Generate 1750</a></li>
+                <li><a href="{{ url_for('show_results') }}">Results</a></li>
             </ul>
         </div>
 
