--- a/templates/html_files/1750_Generator.html
+++ b/templates/html_files/1750_Generator.html
@@ -4,15 +4,12 @@
 {% block head %}
   {{ super() }}
   <style type="text/css">
-    .important { color: #336699; border: 1px solid;}
     .db_output {border: 1px solid; position: absolute; top: 140px; left: 500px; height: 600px; width: 850px; overflow: scroll;}
-    .input_for_1750 { border: 1px solid; height: 100px; width: 500px; position: absolute; top: 740px; left: 950px; overflow: scroll}
     .form1 { position: absolute; bottom: 50px; left: 50px;}
     input[type=text] { width: 50%; padding: 12px 20px; margin: 8px 0;}
     label { font-size: 20px;}
-    #GenerateButton { position: absolute; font-size: 30px;}
+    #GenerateButton { position: absolute; left: 250px; font-size: 50px;}
     #paragraphs { position: absolute; top: 240px; left: 10px; height: 200px; width: 440px;}
-      #AddButton {text-align: left; border-radius: 8px; width: 340px}
   </style>
 {% endblock %}
 
@@ -20,45 +17,33 @@
 {% block content %}
   {{ super() }}
   <div class="db_output">
-    <p class="important">
-        Fill in the name of the Container and the Person packing it. <br>
-      Select items from here then scroll down to the bottom and click on the "Generate" button.
-    </p>
 
       <form method="POST" action="{{ url_for('show_results')}}">
-
-            <label>Container name: </label>
-            <input type="text" name="ContainerName" value="Container name"><br>
-            <label>Person Packing: </label>
-            <input type="text" name="PersonPacking" value="Person packing"><br> <br> <br>
-
+          <label>Container name: </label>
+          <input type="text" name="ContainerName" value="Container name"><br>
+          <label>Person Packing: </label>
+          <input type="text" name="PersonPacking" value="Person packing"><br> <br> <br>
 
           {% for item in data %}
-          <input name="label1" type="checkbox" value="{{ item[2] }} {{ item[1] }}">
-
+            <input name="label1" type="checkbox" value="{{ item[2] }} {{ item[1] }}">
               <ll><label>
-                    Nomenclature:   {{ item[2] }}<br>
-                    Item Number:      {{ item[0] }}
-                    NSN:                    {{ item[1] }}
-                    Unit of issue:      {{ item[3] }} <br> <br>
+                  Nomenclature:   {{ item[2] }}<br>
+                  Item Number:      {{ item[0] }}
+                  NSN:                    {{ item[1] }}
+                  Unit of issue:      {{ item[3] }} <br> <br>
               </label></ll>
-
           {% endfor %}
+          <br>
           <input type="Submit" id="GenerateButton" value="Generate">
       </form>
-
       <br>
-
   </div>
-
 
 
   <div id="paragraphs">
-            <p>This is going to be instruction on how to fill out the form.</p>
+            <p>Fill in the name of the Container and the Person packing it. Then select the items you want to print <br></p>
             <br> <br> <br>
-            <p>This is going to be some kind of warning about what not to do</p>
+            <p>Select items from here then scroll down to the bottom and click on the "Generate" button.</p>
   </div>
-
-
 
 {% endblock %}
